[gd_scene load_steps=2 format=2]

[ext_resource path="res://material_maker/widgets/graph_tree/hierarchy_pane.gd" type="Script" id=1]

[node name="Hierarchy" type="Tree"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 150 )
allow_reselect = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
preview = 2

[node name="ContextMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "No preview", null, 0, false, false, 0, 0, null, "", false, "1 preview", null, 0, false, false, 1, 0, null, "", false, "2 previews", null, 0, false, false, 2, 0, null, "", false, "3 previews", null, 0, false, false, 3, 0, null, "", false ]

[node name="Delay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="gui_input" from="." to="." method="_on_Hierarchy_gui_input"]
[connection signal="item_activated" from="." to="." method="_on_Hierarchy_item_double_clicked"]
[connection signal="item_double_clicked" from="." to="." method="_on_Hierarchy_item_double_clicked"]
[connection signal="id_pressed" from="ContextMenu" to="." method="_on_ContextMenu_id_pressed"]
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
